--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: "Blockchain Challenge Lab"
-description: "IEOR 185-002: Fall 2018"
+title: "L2L Blockchain Spring 2019"
+description: "Course website"
 github:
   show_downloads: false
   is_project_page: false
